# libzathura

./: .gitignore  .gitlab-ci.yml  Doxyfile  LICENSE  Makefile  README  config.mk  libzathura.pc.in  meson.build  meson_options.txt  tests.h  version.h.in
doc/: Doxyfile  Makefile  conf.py  config.mk  index.rst  installation.rst  meson.build  requirements.txt
doc/_themes/sphinx_rtd_theme/: layout.html
doc/api/: actions.rst  annotations.rst  contributing.rst  error.rst  form-fields.rst  index.rst  options.rst
doc/api/actions/: action-goto-3d-view.rst  action-goto-embedded.rst  action-goto-remote.rst  action-goto.rst  action-hide-annotations.rst  action-launch.rst  action-movie.rst  action-named.rst  action-rendition.rst  action-set-ocg-state.rst  action-sound.rst  action-thread.rst  action-transition.rst  action-uri.rst
doc/api/annotations/: annotation-caret.rst  annotation-file-attachment.rst  annotation-free-text.rst  annotation-ink.rst  annotation-line.rst  annotation-link.rst  annotation-markup.rst  annotation-movie.rst  annotation-polygon-and-polyline.rst  annotation-popup.rst  annotation-printers-mark.rst  annotation-rubber-stamp.rst  annotation-screen.rst  annotation-sound.rst  annotation-square-and-circle.rst  annotation-text-markup.rst  annotation-text.rst  annotation-trap-network.rst  annotation-watermark.rst  annotation-widget.rst
doc/api/form-fields/: form-field-button.rst  form-field-choice.rst  form-field-signature.rst  form-field-text.rst
doc/development/: contributing.rst  index.rst
doc/doxygen/: Doxyfile  Makefile
doc/man/: conf.py  libzathura.3.rst
doc/plugins/: index.rst  plugin-api.rst  plugin-manager.rst  plugin.rst
doc/usage/: index.rst
libzathura/: action.c  action.h  annotations.c  annotations.h  attachment.c  attachment.h  checked-integer-arithmetic.c  checked-integer-arithmetic.h  document.c  document.h  error.h  fiu-local.h  form-fields.c  form-fields.h  image-buffer.c  image-buffer.h  image.c  image.h  index.h  internal.c  internal.h  libzathura.h  list.h  macros.h  meson.build  metadata.c  metadata.h  movie.h  node.h  options.c  options.h  outline.c  outline.h  page.c  page.h  plugin-api.c  plugin-api.h  plugin-manager.c  plugin-manager.h  plugin.c  (+6 more)
libzathura/actions/: action-goto-3d-view.c  action-goto-3d-view.h  action-goto-dest.h  action-goto-embedded.c  action-goto-embedded.h  action-goto-remote.c  action-goto-remote.h  action-goto.c  action-goto.h  action-hide-annotations.c  action-hide-annotations.h  action-hide.h  action-launch.c  action-launch.h  action-movie.c  action-movie.h  action-named.c  action-named.h  action-rendition.c  action-rendition.h  action-set-ocg-state.c  action-set-ocg-state.h  action-sound.c  action-sound.h  action-thread.c  action-thread.h  action-transition.c  action-transition.h  action-uri.c  action-uri.h  internal.h
libzathura/actions/internal/: action-goto-3d-view.h  action-goto-dest.h  action-goto-embedded.h  action-goto-remote.h  action-goto.h  action-hide-annotations.h  action-hide.h  action-launch.h  action-movie.h  action-named.h  action-rendition.h  action-set-ocg-state.h  action-sound.h  action-thread.h  action-transition.h  action-uri.h
libzathura/annotations/: annotation-3d.c  annotation-3d.h  annotation-caret.c  annotation-caret.h  annotation-circle.h  annotation-file-attachment.c  annotation-file-attachment.h  annotation-file.c  annotation-file.h  annotation-free-text.c  annotation-free-text.h  annotation-highlight.c  annotation-highlight.h  annotation-ink.c  annotation-ink.h  annotation-line.c  annotation-line.h  annotation-link.c  annotation-link.h  annotation-markup.c  annotation-markup.h  annotation-movie.c  annotation-movie.h  annotation-poly-line.c  annotation-poly-line.h  annotation-polygon.c  annotation-polygon.h  annotation-polyline.c  annotation-polyline.h  annotation-popup.c  annotation-popup.h  annotation-printer-mark.c  annotation-printer-mark.h  annotation-screen.c  annotation-screen.h  annotation-sound.c  annotation-sound.h  annotation-square-and-circle.c  annotation-square.h  annotation-squiggly.c  (+21 more)
libzathura/crypto/: certificate.h  private-key.h  signature.h
libzathura/form-fields/: button.h  choice.h  form-field-button.c  form-field-button.h  form-field-choice.c  form-field-choice.h  form-field-signature.c  form-field-signature.h  form-field-text.c  form-field-text.h  internal.h  text.h
libzathura/plugin-api/: action.h  annotations.h  attachment.h  document.h  form-field.h  form-fields.h  image-buffer.h  image.h  metadata.h  outline.h  page.h  transition.h
tests/: Makefile  actions.c  annotations.c  attachment.c  checked-integer-arithmetic.c  config.mk  document.c  form-fields.c  image-buffer.c  image.c  internal.c  libzathura.suppression  meson.build  metadata.c  options.c  page.c  plugin-manager.c  plugin.c  tests.c  transition.c  utils.c  utils.h
tests/actions/: action-goto-3d-view.c  action-goto-embedded.c  action-goto-remote.c  action-goto.c  action-hide-annotations.c  action-launch.c  action-movie.c  action-named.c  action-rendition.c  action-set-ocg-state.c  action-sound.c  action-thread.c  action-transition.c  action-uri.c
tests/annotations/: annotation-3d.c  annotation-caret.c  annotation-caret.h  annotation-circle.c  annotation-file-attachment.c  annotation-file.c  annotation-free-text.c  annotation-highlight.c  annotation-ink.c  annotation-line.c  annotation-link.c  annotation-markup.c  annotation-movie.c  annotation-poly-line.c  annotation-polygon.c  annotation-polyline.c  annotation-popup.c  annotation-printer-mark.c  annotation-screen.c  annotation-sound.c  annotation-square.c  annotation-squiggly.c  annotation-stamp.c  annotation-strike-out.c  annotation-text-markup.c  annotation-text.c  annotation-trap-net.c  annotation-underline.c  annotation-watermark.c  annotation-widget.c
tests/form-fields/: button.c  choice-item.c  choice.c  form-field-button.c  form-field-choice-item.c  form-field-choice.c  form-field-signature.c  form-field-text.c  text.c
tests/plugin/: Makefile  config.mk  meson.build  plugin.c  plugin.h
(+49 files in other folders)
